# rustProjects

./: README.md
calculator/src/: main.rs
convertUnits/: Cargo.toml
convertUnits/src/: main.rs
fileDownloader/: Cargo.toml
fileDownloader/src/: main.rs
helloWorldImproved/: Cargo.toml
helloWorldImproved/src/: main.rs
secretNumber/: Cargo.toml
secretNumber/src/: main.rs
textSearch/: Cargo.toml
textSearch/src/: main.rs  texto_ejemplo.txt
